--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="primary">#5C1515</color>
+    <color name="dark">#BD1111</color>
+    <color name="blue">#159EEC</color>
+    <color name="medium">#f25b5b</color>
+    <color name="light">#f68a8a</color>
+    <color name="lighter">#fde8e8</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black">#2d2d2d</color>
+    <color name="grey">#7d7d7d</color>
+
 </resources>
